feat: 重构代码，实现多级展开
1. 利用e.preventDefault统一阻止跳转
2. 简化代码，移除无用collapse hode
3. 合并事件，统一绑定到外层

--- a/src/style.css
+++ b/src/style.css
@@ -10,8 +10,8 @@
   display: block;
 }
 
-.sidebar-nav .open ul:not(.app-sub-sidebar),
-.sidebar-nav .active:not(.hold) ul {
+.sidebar-nav .open>ul,
+.sidebar-nav .active>ul {
   display: block;
 }
 
